--- a/OnlineBookStore/OnlineBookStore/appsettings.Development.json
+++ b/OnlineBookStore/OnlineBookStore/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "DataSource=:memory:"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
