--- a/OnlineBookStore/OnlineBookStore/appsettings.json
+++ b/OnlineBookStore/OnlineBookStore/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "DataSource=:memory:"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "Lo6d9VOs9fe5DJnD-KD3COKQEhcoFLIUo4pQ_Hsz",
+    "Issuer": "OnlineBookStoreApi",
+    "Audience": "https://localhost:5100/"
   },
   "AllowedHosts": "*"
 }
